docs/original_moodle/unidades/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-10-56-20.ceg/compilation.txt
Grupo.java:32: error: cannot find symbol
    return puedeAgregar;
           ^
  symbol:   variable puedeAgregar
  location: class Grupo
1 error
Not compiled
